# cookiecutter-django

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
npm/: {{ cookiecutter.project_slug }}.css
{{cookiecutter.project_slug}}/: .eslintrc.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  local_settings.py  manage.py  package.json  pyproject.toml  tox.ini  tsconfig.json  webpack.config.js
{{cookiecutter.project_slug}}/.github/workflows/: testing.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/tools/: base.env  compose.env  copyright.txt  in-container.env  in-host.env
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  apps.py  defaults.py  iniconf.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_tests/: test_{{cookiecutter.project_slug}}.py
