[tool.poetry]
name = "cookiecutter-django"
version = "0.1.0"
description = ""
authors = ["d9pouces <github@19pouces.net>"]
readme = "README.md"
packages = [{include = "cookiecutter_django"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
