[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["d9pouces <github@19pouces.net>"]
description = ""
name = "cookiecutter-django"
packages = [{include = "cookiecutter_django"}]
readme = "README.md"
version = "0.8.0"

[tool.poetry.dependencies]
python = "^3.11"
